fixes missing background color in mir main nav

--- a/save/webpages/mir-layout/scss/project_styles/_navigation.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_navigation.scss
@@ -20,6 +20,15 @@
 .mir-main-nav nav .navbar-nav .dropdown-menu::before {     
   border-color: transparent transparent #5f9ad1 transparent; 
 }
+
+.mir-main-nav .navbar {
+  padding: 0;
+}
+
+.mir-main-nav .navbar-nav > li > a:hover {
+  background-color: #87b3dc;
+}
+
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
   // add/overwrite styles for responsive level lg and lower
