--- a/save/webpages/mir-layout/scss/project_styles/_variables.scss
+++ b/save/webpages/mir-layout/scss/project_styles/_variables.scss
@@ -39,6 +39,10 @@ $brand-danger:  $danger;
 $link-color:         $primary;
 $link-hover-color:   darken($primary, 20%);
 
+$navbar-dark-hover-color:    white;
+$dropdown-link-hover-bg:     #87b3dc;
+
+
 //  Panel
 // -------------------------
 $panel-default-border: $gray-light;
